# NozKash

./: .env.example  .ghost_wallet.json  .gitignore  .gitmodules  404.html  AGENTS.md  CHANGELOG.md  CLAUDE.md  CNAME  CONVENTIONS.md  GEMINI.md  GhostVault.sol  Ghost_Tip_Protocol_Web3_Privacy_Wallet.ipynb  README.md  bn254-crypto.ts  client.py  client.ts  derive_bls.py  docker-compose.yml  example.env  foundry.toml  gen.py  generate_keys.py  generate_vectors.py  ghost-library.ts  ghost_flow.sh  ghost_library.py  ghost_library_test.py  ghost_tip_protocol_web3_privacy_wallet.py  ghost_tip_test.py  ghost_vault_abi.json  index.html  main.py  mint_mock.py  mint_server.py  nozk_flow.sh  package-lock.json  package.json  pyproject.toml  redeem_mock.py  (+5 more)
.github/: copilot-instructions.md
abi/: ghost_vault_abi.json  nozk_vault_abi.json
app/: .env.example  CHANGELOG.md  README.md  abi.json  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
assets/: index--a0SVL_W.js  index-BWojx0Pc.js  index-BzNsO7pe.css  index-C9ahwVjQ.css  index-CS58r8fR.js  index-cGM4OPC4.js  index-qTkyJqiU.js
docs/: GITHUB_SETUP.md
nozk_py/: Dockerfile  README.md  client.py  contract_errors.py  contract_errors_test.py  derive_bls.py  fund_addresses.py  generate_keys.py  generate_vectors.py  mint_mock.py  mint_server.py  mock_test.py  nozk_flow.sh  nozk_library.py  nozk_library_test.py  nozk_theme.py  nozk_tip_test.py  pyproject.toml  redeem_mock.py  relayer_server.py  test_vectors.py  wallet_state.py
nozk_py/typings/py_ecc/: bn128.pyi
nozk_ts/: biome.json  bn254-crypto.ts  client.ts  (+7 more)
(+296 files in other folders)
